tests/baselines/reference/innerModExport2.errors.txt
==== tests/cases/compiler/innerModExport2.ts (4 errors) ====
    module Outer {
    
        // inner mod 1
        var non_export_var: number;
        module {
               ~
!!! error TS1005: ';' expected.
        ~~~~~~
!!! error TS2095: Could not find symbol 'module'.
            var non_export_var = 0;
            export var export_var = 1;
    
            function NonExportFunc() { return 0; }
    
            export function ExportFunc() { return 0; }
        }
        var export_var: number;
            ~~~~~~~~~~~~~~~~~~
!!! error TS2192: All declarations of merged declaration 'export_var' must be exported or not exported.
    
        export var outer_var_export = 0;
        export function outerFuncExport() { return 0; }
    
    }
    
    Outer.NonExportFunc();
          ~~~~~~~~~~~~~
!!! error TS2094: The property 'NonExportFunc' does not exist on value of type 'typeof Outer'.